# 0-zip

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
msvc/: .editorconfig  0-zip.sln  0-zip.vcxproj  0-zip.vcxproj.filters  a-z.sln  a-z.vcxproj  a-z.vcxproj.filters
src/: config.h  dir2zip.cc  dir2zip.h  dll.h  dostime.cc  dostime.h  filename.cc  filename.h  handle.h  main.cc  options.h  path_ops.h  pdf2zip.cc  pdf2zip.h  pkzip.h  pkzip_io.cc  pkzip_io.h  rar2zip.cc  rar2zip.h  strnatcmp.h  trash.h  version.h  zip2zip.cc  zip2zip.h
src/apple/: trash.mm
src/posix/: trash.cc
src/win32/: dlfcn.h  trash.cc
